Replaced the DateTime API with the older Date API to make the software java 7 copatible.